# Fami32

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old
components/Adafruit-GFX-Library/: Adafruit_GFX.h
components/Adafruit_Keypad/: CMakeLists.txt
components/Adafruit_MPR121/: CMakeLists.txt  MPR121_Keypad.cpp  MPR121_Keypad.h  touchKeypadEvent.h
components/Adafruit_SSD1306/: Adafruit_SSD1306.cpp
components/USBMIDI/: CMakeLists.txt  USBMIDI.cpp  idf_component.yml
components/USBMIDI/include/: USBMIDI.h
components/arduino-esp32-lite/: CMakeLists.txt  idf_component.yml
components/arduino-esp32-lite/cores/esp32/: Arduino.h  Esp.cpp  HWCDC.cpp  HardwareSerial.h  WString.cpp  core_version.h  esp32-hal-misc.c  esp32-hal-rmt.c  esp32-hal.h
components/gfx_ssd1306/: CMakeLists.txt
components/gfx_ssd1306/include/: gfx_oled_ssd1306.h
components/gfx_ssd1306/src/: gfx_oled_ssd1306.cpp
desktop/: CMakeLists.txt  main.cpp
include/: fami32_icon.h
include/fonts/: font5x7.h  rismol_3_4.h  rismol_5_7.h
lib/easy_usb_midi/: easy_usb_midi.cpp  easy_usb_midi.h
main/: CMakeLists.txt  basic_dsp.h  bluetooth_audio.h  boot_check.cpp  boot_check.h  dpcm.c  env_gen.h  ftm_file.cpp  gen_env.cpp  git_version.cpp  gui.h  idf_component.yml  keypad_io.cpp  ls.h  main.cpp  micro_config.c  micro_config.h  note2freq.h  ringbuf.h  src_config.c  src_config.h  touch_input.cpp  tracker.cpp  tracker.h  usb_msc_mode.cpp  wave_table.c
main/fami32core/: fami32_channel.cpp  fami32_instrument.cpp  fami32_player.cpp
main/gui/: gui_channel.cpp  gui_common.cpp  gui_dpcm_editor.cpp  gui_file.cpp  gui_frames.cpp  gui_info.cpp  gui_input.cpp  gui_instrument.cpp  gui_menu.cpp  gui_settings.cpp  gui_tracker.cpp  gui_visual.cpp
main/include/: MPR121_Keypad.h  basic_dsp.h  dpcm.h  fami32_icon.h  ftm_file.h  git_version.h.in  src_config.h  touch_input.h  uac_mode.h  wav.hpp  wave_table.h
main/include/app/: boot_check.h  boot_router.h
main/include/assets/fonts/: rismol_3_5.h
main/include/audio/: basic_dsp.h  env_gen.h  note2freq.h  vrc7_synth.h  wave_table.h
main/include/config/: micro_config.h
main/include/fami32core/: fami32_channel.h  fami32_common.h  fami32_instrument.h  fami32_player.h
main/include/fonts/: font4x6.h  rismol_3_4.h  rismol_3_5.h  rismol_5_7.h
main/include/gui/: gui_channel.h  gui_common.h  gui_dpcm_editor.h  gui_file.h  gui_frames.h  gui_info.h  gui_input.h  gui_instrument.h  gui_menu.h  gui_settings.h  gui_tracker.h  gui_visual.h  note_io.h
main/include/input/: keypad_io.h
main/include/storage/: ftm_file.h  vgm_exporter.h
main/include/usb/: tinyusb_helper.h  usb_msc_mode.h
main/src/app/: boot_check.cpp  boot_router.cpp  git_version.cpp  main.cpp
main/src/audio/: emu2413.c  note2freq.c  src_config.c  vrc7_synth.cpp  wave_table.c
main/src/config/: micro_config.c
main/src/core/: fami32_channel.cpp  fami32_instrument.cpp  fami32_player.cpp
main/src/gui/: gui_channel.cpp  gui_common.cpp  gui_file.cpp  gui_frames.cpp  gui_info.cpp  gui_input.cpp  gui_instrument.cpp  gui_menu.cpp  gui_settings.cpp  gui_tracker.cpp  gui_visual.cpp  note_io.cpp
main/src/input/: mpr121_keypad.cpp
main/src/storage/: ftm_file.cpp  vgm_exporter.cpp
main/src/usb/: tinyusb_helper.cpp  uac_mode.cpp  usb_msc_mode.cpp
main/test_file/: 1_lover.ftm  4_raindance.ftm  OfTheNationOfDirtpilers.ftm
src/: SerialTerminal.h  basic_dsp.h  chipbox_pin.h  dpcm.c  dpcm.h  free_heap.h  ftm_file.cpp  ftm_file.h  gui.h  ls.c  main.cpp  note2freq.h  src_config.h  tracker.h  wave_table.h
